services/30-metrics/prometheus/40-statefulset.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus
spec:
  serviceName: prometheus
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: prom/prometheus:v2.13.0
          args:
            - '--log.level=info'
            - '--log.format=json'
            - '--config.file=/etc/prometheus/prometheus.yaml'
            - '--storage.tsdb.path=/var/prometheus/'
          ports:
            - name: http
              containerPort: 9090
          volumeMounts:
            - name: data
              mountPath: /var/prometheus
            - name: config
              mountPath: /etc/prometheus
              readOnly: true
            - name: home-assistant-access-token
              mountPath: /etc/home-assistant
              readOnly: true
          securityContext:
            runAsUser: 0
      volumes:
        - name: data
          hostPath:
            path: /var/home-server/prometheus
        - name: config
          configMap:
            name: config
        - name: home-assistant-access-token
          secret:
            secretName: home-assistant-access-token
