services/30-metrics/prometheus/60-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus
  annotations:
    kubernetes.io/ingress.class: internal
spec:
  rules:
    - host: prometheus.anton-johansson.local
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus
              servicePort: 9090
