services/30-metrics/prometheus/70-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus
  annotations:
    kubernetes.io/ingress.class: internal
spec:
  rules:
    - host: prometheus.anton-johansson.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
  tls:
    - secretName: prometheus-certificate
      hosts:
        - prometheus.anton-johansson.local
